--- a/CarAppV3/app/src/main/AndroidManifest.xml
+++ b/CarAppV3/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DesignDetailsActivity"></activity>
+        <activity android:name=".NewDrawingActivity"></activity>
+        <activity android:name=".DesignDetailsActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
