--- a/CarAppV3/app/src/main/AndroidManifest.xml
+++ b/CarAppV3/app/src/main/AndroidManifest.xml
@@ -2,9 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.carappv3">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET">
 
     </uses-permission>
+
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,9 +20,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".NewDrawingActivity"></activity>
-        <activity android:name=".DesignDetailsActivity" />
-        <activity android:name=".MainActivity">
+
+        <activity
+            android:name=".NewDrawingActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
+        <activity
+            android:name=".DesignDetailsActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
+        />
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
