--- a/CarAppV3/app/build.gradle
+++ b/CarAppV3/app/build.gradle
@@ -44,9 +44,14 @@ dependencies {
     implementation "com.quickbirdstudios:yuvtomat:1.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 
-    def camerax_version = '1.0.0-alpha06'
-    implementation "androidx.camera:camera-core:${camerax_version}"
+    def camerax_version = "1.0.0-beta03"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
+    // If you want to additionally use the CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    // If you want to additionally use the CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha10"
+    // If you want to additionally use the CameraX Extensions library
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha10"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
