--- a/CarAppV5/app/build.gradle
+++ b/CarAppV5/app/build.gradle
@@ -36,12 +36,12 @@ dependencies {
     implementation "androidx.camera:camera-core:${cameraxVersion}"
     implementation "androidx.camera:camera-camera2:${cameraxVersion}"
 
-    implementation "com.quickbirdstudios:yuvtomat:1.1.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
-
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':openCVLibrary343')
+
+    implementation 'com.google.firebase:firebase-analytics:17.4.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
