--- a/CarAppV5/app/build.gradle
+++ b/CarAppV5/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation project(path: ':openCVLibrary343')
 
     implementation 'com.google.firebase:firebase-analytics:17.4.0'
+
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
+    implementation 'com.google.firebase:firebase-ml-vision-object-detection-model:19.0.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
