--- a/CarAppV5/build.gradle
+++ b/CarAppV5/build.gradle
@@ -5,7 +5,10 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
