can save immutable bitmaps. canvas somehow overwrites my bitmap, dammitgit add .!

--- a/CarAppV3/app/src/main/AndroidManifest.xml
+++ b/CarAppV3/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:name=".NewDrawingActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
         <activity
+            android:name=".StaticPicActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
+        <activity
             android:name=".DesignDetailsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
         <activity android:name=".MainActivity">
