--- a/CarAppV5/app/build.gradle
+++ b/CarAppV5/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
     implementation 'com.google.firebase:firebase-ml-vision-object-detection-model:19.0.5'
+
+    implementation 'com.android.volley:volley:1.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
