--- a/CarAppV3/app/build.gradle
+++ b/CarAppV3/app/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-vision-object-detection-model:19.0.5'
 
     implementation 'com.android.volley:volley:1.1.1'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
